--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:id="@+id/main_background_image_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:alpha="0.8"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,8 +35,10 @@
         android:id="@+id/latitude_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingStart="@dimen/main_padding"
+        android:paddingTop="@dimen/main_padding"
         android:text="@string/latitude"
-        android:padding="@dimen/main_padding"
+        android:textColor="@color/colorTextPrimary"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title_text_view" />
@@ -44,8 +47,10 @@
         android:id="@+id/longitude_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingStart="@dimen/main_padding"
+        android:paddingTop="@dimen/padding_between_items"
         android:text="@string/longitude"
-        android:padding="@dimen/main_padding"
+        android:textColor="@color/colorTextPrimary"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/latitude_text_view" />
@@ -54,8 +59,10 @@
         android:id="@+id/accuracy_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingStart="@dimen/main_padding"
+        android:paddingTop="@dimen/padding_between_items"
         android:text="@string/accuracy"
-        android:padding="@dimen/main_padding"
+        android:textColor="@color/colorTextPrimary"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/longitude_text_view" />
@@ -64,8 +71,10 @@
         android:id="@+id/altitude_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingStart="@dimen/main_padding"
+        android:paddingTop="@dimen/padding_between_items"
         android:text="@string/altitude"
-        android:padding="@dimen/main_padding"
+        android:textColor="@color/colorTextPrimary"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/accuracy_text_view" />
@@ -74,8 +83,10 @@
         android:id="@+id/address_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingStart="@dimen/main_padding"
+        android:paddingTop="@dimen/padding_between_items"
         android:text="@string/address"
-        android:padding="@dimen/main_padding"
+        android:textColor="@color/colorTextPrimary"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/altitude_text_view" />
@@ -84,12 +95,13 @@
         android:id="@+id/empty_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingTop="@dimen/padding_between_items"
         android:text="@string/no_location_details"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/colorTextPrimary"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
